--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -76,3 +76,10 @@ textarea.a-sm-text-input
     background-color: $base
     border-color: #c4c7bf
     box-shadow: rgba(black, .1) 0 1px 2px inset
+
+
+.a-toggle-checkbox
+  +position(absolute, left 0, top 0)
+  opacity: 0
+  +size(1px)
+  overflow: hidden
