--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -21,7 +21,7 @@ $global-nav-width: 5rem
   +media-breakpoint-down(sm)
     transition: left .2s ease-out
     width: 12rem
-    overflow: hidden
+    overflow-y: auto
     left: -12rem
     .global-nav.is-active &
       left: 0
