--- a/app/views/announcements/show.html.slim
+++ b/app/views/announcements/show.html.slim
@@ -3,7 +3,7 @@
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title = title
+      .page-header__title お知らせ
       .page-header-actions
         ul.page-header-actions__items
           - if admin_login?
