--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -4,7 +4,7 @@ header.page-header
   .container
     .page-header__container
       .page-header__title
-        = @practice.title
+        | プラクティス
       .page-header-actions
         ul.page-header-actions__items
           - if current_user.admin?
