--- a/app/views/users/retirement/new.html.slim
+++ b/app/views/users/retirement/new.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, "no-header no-footer no-recent-reports")
+- content_for(:page_classes, "no-header no-global-nav no-footer no-recent-reports")
 
 .auth-form.is-sign-up.a-card.is-in-app
   header.auth-form__header
