--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -53,6 +53,11 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-graduation-cap
             .global-nav-links__link-label コース
+        li.global-nav-links__item.is-hidden-md-up
+          = link_to edit_current_user_path, class: "global-nav-links__link #{current_link /^current_user/}" do
+            .global-nav-links__link-icon
+              i.fas.fa-cog
+            .global-nav-links__link-label 設定
         - if current_user && current_user.admin?
           li.global-nav-links__item.is-hidden-md-up
             = link_to admin_root_path, class: "global-nav-links__link" do
@@ -64,3 +69,8 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-sign-out-alt
             .global-nav-links__link-label サインアウト
+        li.global-nav-links__item.is-hidden-md-up
+          = link_to new_user_retirement_path(current_user), class: "global-nav-links__link" do
+            .global-nav-links__link-icon
+              i.fas.fa-ban
+            .global-nav-links__link-label 退会
