--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -2,7 +2,7 @@
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title = title
+      .page-header__title Wiki
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
