不要な変数を渡さないようにした

--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -8,4 +8,4 @@ header.page-header
 
 .page-body
   .container
-    = render "form", article: @article, categories: @categories
+    = render "form", article: @article
