ファイルインプットのUIを作成し、全体の画像を正方形以外でもデザインが崩れなくなるようにした

--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -37,7 +37,8 @@
     color: rgba(white, .6)
 
 .recent-reports-item__user-icon
-  +size(2.75rem auto)
+  +size(2.75rem)
+  object-fit: cover
   border-radius: 50%
   float: left
   margin-right: .75rem
