--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -33,8 +33,9 @@ $global-nav-width: 5rem
 
 .global-nav-current-user__icon
   img
-    +size(($global-nav-width - 1.5rem) auto)
+    +size(($global-nav-width - 1.5rem))
     display: block
+    object-fit: cover
     +margin(horizontal, auto)
     border-radius: 50%
 
