--- a/app/assets/stylesheets/blocks/user/_users.sass
+++ b/app/assets/stylesheets/blocks/user/_users.sass
@@ -31,6 +31,7 @@
   +size(4rem)
   border: solid $base .25rem
   background-color: white
+  object-fit: cover
   +media-breakpoint-down(sm)
     +size(3rem)
     +position(absolute, left -.5rem, top -.25rem)
