--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -53,16 +53,6 @@ textarea.a-sm-text-input
   &.is-md
     min-height: 16rem
 
-.a-file-input
-  cursor: pointer
-  *
-    cursor: pointer
-  input
-    opacity: 0
-    +position(absolute, left -1px, top -1px)
-    +size(1px)
-    overflow: hidden
-
 .a-sm-label
   +text-block(.8125rem 1.45 .5rem, block 600)
   &.is-required
@@ -86,3 +76,49 @@ textarea.a-sm-text-input
     background-color: $base
     border-color: #c4c7bf
     box-shadow: rgba(black, .1) 0 1px 2px inset
+
+    font-size: 12px
+    line-height: 1.4
+    font-weight: 800
+    color: red
+    white-space: nowrap
+
+.a-file-input
+  label
+    +size(27rem 10rem)
+    max-width: 100%
+    +margin(horizontal, auto)
+    border: solid 1px $input-border
+    background-color: $base
+    display: flex
+    align-items: center
+    justify-content: center
+    +position(relative)
+    overflow: hidden
+    cursor: pointer
+    border-radius: .25rem
+    padding: .5rem .5rem 2.75rem .5rem
+  img
+    max-height: 100%
+    transition: all .2s ease-out
+    &:hover
+      opacity: .6
+  &.is-avatar img
+    +size(7rem)
+    object-fit: cover
+  input
+    overflow: hidden
+    +size(0)
+    +position(absolute, left 0, top 0)
+    opacity: 0
+  p
+    +size(100% 2.25rem)
+    background-color: $base
+    +position(absolute, left 0, bottom 0, right 0)
+    +text-block(.8125rem 1, flex 700)
+    justify-content: center
+    align-items: center
+    border-top: solid 1px $input-border
+    transition: all .2s ease-out
+    &:hover
+      background-color: #e8e8e8
