--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -34,7 +34,8 @@ $thread-header-author: 6rem
     margin-left: -1.75rem
 
 .thread__author-icon
-  +size(3.5rem auto)
+  +size(3.5rem)
+  object-fit: cover
   border-radius: 50%
   +media-breakpoint-down(sm)
     box-shadow: white 0 0 0 .375rem
