--- a/app/assets/stylesheets/blocks/user/_user-profile.sass
+++ b/app/assets/stylesheets/blocks/user/_user-profile.sass
@@ -15,6 +15,8 @@
     margin-bottom: .5rem
   img
     border-radius: .25rem
+    +size(5.5rem)
+    object-fit: cover
 
 .user-profile__login-name
   +text-block(1.5rem 1.2 .125rem, 600 $main-color)
