--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -37,18 +37,20 @@
 
     .auth-form-item
       = f.label :avatar, class: "a-sm-label is-required"
-      .auth-form-item-avatar
-        - if f.object.avatar.attached?
-          = image_tag f.object.avatar.variant(resize: "100x100"), class: "auth-form-item-avatar__image"
-        label.a-file-input.is-button-simple-md-warning
-          - if f.object.avatar.attached?
-            | 画像を変更
+      .form-item-file-input.js-file-input.a-file-input.is-avatar
+        label.js-file-input__preview(for="avatar")
+          - if current_user.company.logo.attached?
+            = image_tag company.logo.variant(resize: "100x100")
+            p
+              | 画像を変更
           - else
-            | 画像を選択
-          = f.file_field :avatar
+            p
+              | 画像を選択
+          = f.file_field :logo, id: "avatar"
+
       - unless user.adviser?
         .auth-form-item__help
-          p 著作権侵害にならない画像を使用してください。
+          p 著作権侵害にならない画像を使用してください。画像は正方形に切り抜かれます。
 
     - unless user.adviser?
       .auth-form-item.is-hidden
