--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -26,10 +26,7 @@
 
   .form-actions
     ul.form-actions__items
+      li.form-actions__item.is-main
+        = f.submit nil, class: "is-button-simple-lg-warning is-block", id: "js-shortcut-submit"
       li.form-actions__item
-        = f.submit nil, class: "is-button-simple-md-secondary", id: "js-shortcut-submit"
-      li.form-actions__item
-        - if params[:action] == "new" || params[:action] == "create"
-          = link_to "キャンセル", articles_path, class: "is-button-simple-md-secondary"
-        - elsif params[:action] == "edit" || params[:action] == "update"
-          = link_to "キャンセル", article_path, class: "is-button-simple-md-secondary"
+        = link_to "キャンセル", :back, class: "is-button-simple-md-secondary"
