--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -25,9 +25,8 @@ header.page-header
       header.practice-contents__header
         h1.practice-contents__title
           = @article.title
-          br
-          = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(",")
-      section.practice-content.a-card
+      .practice-content.a-card
+        = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(",")
         .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           = @article.body
-      section.practice-content.a-card
+      .practice-content.a-card
