--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -11,4 +11,4 @@ header.page-header
 
 .page-body
   .container.is-padding-horizontal-0-sm-down
-    = render "admin/users/admin_users_table", users: @users
+    = render "admin/users/admin_users_table", users: @users, direction: @direction
