--- a/app/views/admin/users/_admin_users.html.slim
+++ b/app/views/admin/users/_admin_users.html.slim
@@ -1,4 +1,4 @@
-- params[:order_by] == order_by && direction == "asc" ? direction = "desc" : direction = "asc"
+- direction = params[:order_by] == order_by && direction == "asc" ? "desc" : "asc"
 
 = link_to admin_users_path(order_by: order_by, direction: direction, target: target), class: "is-button-simple-xs-secondary is-icon" do
   i.fas.fa-caret-up
