welcomeとapplicationでlayoutを分けた

--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -2,17 +2,15 @@
 - content_for :head_last do
   = javascript_include_tag "https://sdk.form.run/js/v2/formrun.js"
 
-= render "welcome_header"
-= render "main_visual"
-= render "welcome_global_nav"
+= render "/welcome/main_visual"
+= render "/welcome/welcome_global_nav"
 .welcome-sections
-  = render "about"
-  = render "tutorials"
-  = render "eligibility"
-  = render "process"
-  = render "finding_employment"
-  = render "administrator"
-  = render "other"
-  = render "faq"
-  = render "form"
-= render "welcome_footer"
+  = render "/welcome/about"
+  = render "/welcome/tutorials"
+  = render "/welcome/eligibility"
+  = render "/welcome/process"
+  = render "/welcome/finding_employment"
+  = render "/welcome/administrator"
+  = render "/welcome/other"
+  = render "/welcome/faq"
+  = render "/welcome/form"
