--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -22,7 +22,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-pen
             -if Report.unchecked.not_wip.count > 0 && current_user.admin?
-              .gloval-nav__item-count.a-notification-count
+              .global-nav__item-count.a-notification-count
                 = Report.unchecked.not_wip.count
             .global-nav-links__link-label 日報
         - if admin_adviser_or_mento_login?
@@ -31,7 +31,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
               .global-nav-links__link-icon
                 i.fas.fa-hand-paper
               -if Product.unchecked.count > 0 && current_user.admin?
-                .gloval-nav__item-count.a-notification-count
+                .global-nav__item-count.a-notification-count
                   = Product.unchecked.count
               .global-nav-links__link-label 提出物
         li.global-nav-links__item
@@ -39,7 +39,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-question
             - if Question.not_solved.count > 0 && current_user.admin?
-              .groval-nav__item-count.a-notification-count
+              .grobal-nav__item-count.a-notification-count
                 = Question.not_solved.count
             .global-nav-links__link-label Q&A
         li.global-nav-links__item
