--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -63,6 +63,7 @@
   display: flex
   align-items: center
   margin-bottom: .125rem
+  justify-content: space-between
   +media-breakpoint-down(sm)
     flex-direction: column
     align-items: flex-start
@@ -119,7 +120,7 @@
   +text-block(.75rem 1.4, block $muted-text inline-block)
 
 .thread-list-item__body
-  +text-block(.875rem 1.8)
+  +text-block(.875rem 1.6)
 
 .thread-list-item-meta__created-at
   +text-block(.75rem 1.4, $muted-text)
