--- a/app/views/practices/new.html.slim
+++ b/app/views/practices/new.html.slim
@@ -5,5 +5,6 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
-.container
-  = render "form", practice: @practice
+.page-body
+  .container
+    = render "form", practice: @practice
