--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -76,3 +76,7 @@ $global-nav-width: 5rem
   +text-block(.625rem 1.45, center)
   +media-breakpoint-down(sm)
     font-size: .875rem
+
+.a-notification-count
+  margin-left: 1.4rem
+  margin-top: -1.6rem
