typo 修正と CSS をネストして global-nav__item-count 配下のみに適用

--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -39,7 +39,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-question
             - if Question.not_solved.count > 0 && current_user.admin?
-              .grobal-nav__item-count.a-notification-count
+              .global-nav__item-count.a-notification-count
                 = Question.not_solved.count
             .global-nav-links__link-label Q&A
         li.global-nav-links__item
