--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -77,6 +77,7 @@ $global-nav-width: 5rem
   +media-breakpoint-down(sm)
     font-size: .875rem
 
-.a-notification-count
-  margin-left: 1.4rem
-  margin-top: -1.6rem
+.global-nav__item-count
+  &.a-notification-count
+    margin-left: 1.4rem
+    margin-top: -1.6rem
