--- a/app/views/card/_form.html.slim
+++ b/app/views/card/_form.html.slim
@@ -1,5 +1,5 @@
 - method = action == :new ? "post" : "put"
-script(src="https://js.stripe.com/v3/")
+= javascript_include_tag "https://js.stripe.com/v3/"
 = form_with url: card_path, method: method, local: true, id: "payment-form" do |f|
   .form-row
     label.a-label(for="card-element") カード番号
