--- a/app/views/application/_active_users.html.slim
+++ b/app/views/application/_active_users.html.slim
@@ -3,5 +3,5 @@ h4 学習中ユーザー
 - active_users.each do |user|
   p
     = link_to user do
-      = image_tag user.avatar_image(45)
+      = image_tag user.avatar_image(45), class: "is-#{user.role}"
       span(style="margin-left:5px") = user.login_name
