--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -19,7 +19,7 @@
         .thread-list-item-meta__comment-count
           .thread-list-item-meta__comment-count-value
             - product.checks.each do |check|
-              = image_tag check.user.avatar_image(20), class: "thread-list-item__checked-author-icon"
+              = image_tag check.user.avatar_image(20), class: "thread-list-item__checked-author-icon is-#{check.user.role}"
         .stamp.stamp-approve
           h2.stamp__content.is-title 確認済
           time.stamp__content.is-created-at
