未確認数のアイコンを右上からの距離へ変更

--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -46,6 +46,7 @@ $global-nav-width: 5rem
   border-bottom: solid 1px $side-border
 
 .global-nav-links__link
+  position: relative
   display: flex
   flex-direction: column
   white-space: nowrap
@@ -78,6 +79,5 @@ $global-nav-width: 5rem
     font-size: .875rem
 
 .global-nav__item-count
-  &.a-notification-count
-    margin-left: 1.4rem
-    margin-top: -1.6rem
+  right: 0.0625rem
+  top: 0.0625rem
