--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -81,4 +81,4 @@ header.page-header
           li.completed-users__user
             = link_to user, class: "completed-users__user-link" do
               span.completed-users__user-icon
-                = image_tag user.avatar.variant(resize: "32x32>").processed
+                = image_tag user.avatar_image(32)
