--- a/app/views/admin/companies/_form.html.slim
+++ b/app/views/admin/companies/_form.html.slim
@@ -22,7 +22,7 @@
           .form-item-file-input.js-file-input.a-file-input
             label.js-file-input__preview(for="company_logo")
               - if company.logo.attached?
-                = image_tag company.logo.variant(resize: "500x500>").processed
+                = image_tag company.logo_image(500)
                 p 画像を変更
               - else
                 p 画像を選択
