--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -2,14 +2,14 @@
 .thread-comment
   .thread-comment__author
     = link_to comment.user, itempro: "url", class: "thread-comment__author-link" do
-      = image_tag comment.user.avatar.variant(resize: "200x200>").processed, class: "thread-comment__author-icon"
+      = image_tag comment.user.avatar_image(200), class: "thread-comment__author-icon"
   .thread-comment__body.a-card
     header.thread-comment__body-header
       - if user_comments_page?
         h2.thread-comment__title.is-user-comments
           = t("activerecord.models.#{commentable.class.to_s.tableize.singularize}")
           = link_to commentable, class: "thread-comment__title-link" do
-            = image_tag commentable.user.avatar.variant(resize: "40x40>").processed, class: "thread-comment__title-icon"
+            = image_tag commentable.user.avatar_image(40), class: "thread-comment__title-icon"
             = truncate(commentable.title, length: 50)
       - else
         h2.thread-comment__title
