--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -19,10 +19,7 @@
   - if practice.started_users.students.exists?
     .practice-started-users
       .practice-started-users__items
-        - practice.started_users.students.each do |user|
-          .practice-started-users__item
-            = link_to user, class: "practice-started-users__item-link" do
-              = image_tag user.avatar.variant(resize: "44x44>").processed, class: "practice-started-users__item-icon #{user.active? ? "active" : "inactive"}"
+        = render partial: "student", collection: practice.started_users.students, as: :user
   - if current_user.admin?
     .category-practices-item__handle.js-show-handle__target
       ul.is-button-group
