--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -95,7 +95,7 @@ header.page-header
               | 次の日報
               i.fas.fa-angle-right
       = link_to @report.user, itempro: "url", class: "thread__author-link" do
-        = image_tag @report.user.avatar.variant(resize: "120x120>").processed, class: "thread__author-icon"
+        = image_tag @report.user.avatar_image(120), class: "thread__author-icon"
 
     = render "comments/comments", comments: @report.comments.order(:created_at), form_visibility: true
     = render "footprints/footprints", footprints: @footprints
