--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -7,7 +7,7 @@
             = link_to user.login_name, user, class: "users-item__name-link"
           .users-item__icon
             = link_to user do
-              = image_tag user.avatar.variant(resize: "80x80>").processed, class: "users-item__icon-image"
+              = image_tag user.avatar_image(80), class: "users-item__icon-image"
         = render "users/sns", user: user
       .users-item__body
         .users-item__description
