resizeを辞めてoriginal画像を出すようにした
プラクティス一覧がタイムアウトするため

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -99,6 +99,7 @@ textarea.a-sm-text-input
       opacity: .6
   &.is-avatar img
     +size(7rem)
+    object-fit: cover
   input
     overflow: hidden
     +size(0)
