--- a/app/assets/stylesheets/blocks/header/_header-drop-down.sass
+++ b/app/assets/stylesheets/blocks/header/_header-drop-down.sass
@@ -64,16 +64,13 @@
 .header-notifications-item__avatar-image
   float: left
   +size(2rem)
+  object-fit: cover
   border-radius: 50%
   margin-right: .5rem
   margin-bottom: .25rem
 
 .header-drop-down__overlay
   +position(fixed, left 0, top 0, right 0, bottom 0, 1)
-
-.header-notifications-item__body
-
-.header-notifications-item__avatar-image
 
 .header-notifications-item__message
   +text-block(.8125rem 1.45 .25rem, $default-text)
