--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -35,6 +35,7 @@ $global-nav-width: 5rem
   img
     +size(($global-nav-width - 1.5rem))
     display: block
+    object-fit: cover
     +margin(horizontal, auto)
     border-radius: 50%
 
