--- a/app/assets/stylesheets/blocks/thread/_thread-comments.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comments.sass
@@ -24,6 +24,7 @@ $thread-header-author: 3.5rem
 
 .thread-comment__author-icon
   +size(3.5rem)
+  object-fit: cover
   border-radius: 50%
 
 .thread-comment__title
@@ -47,6 +48,7 @@ $thread-header-author: 3.5rem
   +size(1.5rem)
   border-radius: 50%
   margin-right: .75rem
+  object-fit: cover
 
 .thread-comment__title-label
   +text-block(.8125rem, $muted-text block 400)
