--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -39,6 +39,7 @@
 
 .recent-reports-item__user-icon
   +size(2.75rem)
+  object-fit: cover
   border-radius: 50%
   float: left
   margin-right: .75rem
