--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -35,6 +35,7 @@ $thread-header-author: 6rem
 
 .thread__author-icon
   +size(3.5rem)
+  object-fit: cover
   border-radius: 50%
   +media-breakpoint-down(sm)
     box-shadow: white 0 0 0 .375rem
