--- a/app/assets/stylesheets/blocks/report/_completed-users.sass
+++ b/app/assets/stylesheets/blocks/report/_completed-users.sass
@@ -7,6 +7,8 @@
 
 .completed-users__user-icon
   img
+    object-fit: cover
+    +size(2rem)
     display: block
     border-radius: 50%
     +margin(horizontal, .25rem)
