--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -80,5 +80,4 @@ header.page-header
         - @practice.completed_users.each do |user|
           li.completed-users__user
             = link_to user, class: "completed-users__user-link" do
-              span.completed-users__user-icon
-                = image_tag user.avatar_image(32)
+              = image_tag user.avatar_image(32), class: "completed-users__user-image"
