--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -3,8 +3,7 @@ $header-height: 3.125rem
 .header
   background-color: $base
   +position(relative, 1)
-  +media-breakpoint-down(md)
-    border-bottom: solid $background-color .0625rem
+  border-bottom: solid 1px $background-color
 
 .header__container
   display: flex
