--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -5,7 +5,7 @@
   header.auth-form__header
     h1.auth-form__title = title
   .auth-form__body
-    = render "form", from: :new, url: users_path, user: @user
+    p 現在新規登録を停止しております。４月に再開予定です。
   footer.auth-form__footer
     nav.auth-form-nav
       ul.auth-form-nav__items
