画像をGCSのURL直接表示に変更
ヘッダーに下線も追加

--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -44,6 +44,7 @@ body
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
   html body &.has-no-right-padding
+    border-bottom: solid $background-color .0625rem
     padding-right: 14rem
     +media-breakpoint-down(lg)
       +padding(horizontal, 6rem 0)
